tests/rosetta/out/Fortran/bitwise-operations.error
gfortran: exit status 1
/tmp/bitwise-operations.f90:53:38:

   53 |       if ((mod(((mod(ua,2) == 1) .and. ub),2) == 1)) then
      |                                      1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/bitwise-operations.f90:71:37:

   71 |       if ((mod(((mod(ua,2) == 1) .or. ub),2) == 1)) then
      |                                     1
Error: Operands of logical operator ‘.or.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/bitwise-operations.f90:91:70:

   91 |       if ((((((abit == 1) .and. bbit) == 0)) .or. ((((abit == 0) .and. bbit) == 1)))) then
      |                                                                      1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/bitwise-operations.f90:91:31:

   91 |       if ((((((abit == 1) .and. bbit) == 0)) .or. ((((abit == 0) .and. bbit) == 1)))) then
      |                               1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
